--- a/index.css
+++ b/index.css
@@ -90,6 +90,8 @@ body,html {
 #portfolio {
     width:80%;
     padding:2% 10%;
+    padding-bottom: 0%;
+    
 }
 #portfolio div h1 {
     font-size:40px;
@@ -112,10 +114,11 @@ body,html {
     margin:4vh 0px !important;
     padding:2vh 0px !important;
 }
-#contact {
+/* Removing this for now as its giving to much margin and padding to the badger. a Temp fix for the animation
+    #contact {
     margin:4vh 0px !important;
     padding:2vh 0px !important;
-}
+} */
 #contact form {
     width:100%;
 }
@@ -194,7 +197,7 @@ body,html {
     color:#fff;
 }
 #details {
-    margin:6vh 0px;
+    margin:1vh 0px;
 }
 .btn_social {
     font-size:18px;
@@ -256,9 +259,10 @@ body,html {
 }
 #footer {
     width:100%;
-    padding:10vh 0px;
+    padding:5vh 0px;
     text-align:center;
     font-weight:bold;
+    padding-top: 0%;
 }
 #footer a {
     font-size:18px;
@@ -273,6 +277,31 @@ body,html {
     animation: Gradient 20s ease infinite;
     font-family: 'Comfortaa', cursive;
     text-decoration:none;
+}
+/*  Testing out a way to make this look cooler as you scroll down, there is a bug that can break the animation and display incorrect when adding this code
+    #badgerArt {
+    width:100%;
+    height:40vh;
+    background:linear-gradient(0deg,rgba(0,0,0,1),rgba(0,0,0,0)),url("./badger.jpg") center center fixed;
+    background-size:13% auto;
+    background-repeat:no-repeat;
+    color:white;
+    display:flex;
+    justify-content:center;
+    flex-direction:column;
+    transition:5s ease-in-out;
+    padding-top:20vh;
+} */
+#badger{
+    height: 10%;
+    width: 12%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: center;
+    border-top-right-radius: 35%;
+    border-bottom-right-radius: 25%;
+    
 }
 button:focus {
     outline:none;
